# weather-bot

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py
api/routers/: markets.py  model.py  positions.py
backtest/: runner.py  track_a.py  track_b.py
config/: stations.py
data/diurnal_climatology/: KATL_1.json  KATL_10.json  KATL_11.json  KATL_12.json  KATL_2.json  KATL_3.json  KATL_4.json  KATL_5.json  KATL_6.json  KATL_7.json  KATL_8.json  KATL_9.json  KAUS_1.json  KAUS_10.json  KAUS_11.json  KAUS_12.json  KAUS_2.json  KAUS_3.json  KAUS_4.json  KAUS_5.json  KAUS_6.json  KAUS_7.json  KAUS_8.json  KAUS_9.json  KBOS_1.json  KBOS_10.json  KBOS_11.json  KBOS_12.json  KBOS_2.json  KBOS_3.json  KBOS_4.json  KBOS_5.json  KBOS_6.json  KBOS_7.json  KBOS_8.json  KBOS_9.json  KDCA_1.json  KDCA_10.json  KDCA_11.json  KDCA_12.json  (+200 more)
db/: models.py  session.py
frontend/: package.json  tailwind.config.ts
frontend/src/: index.css
ingestion/: asos.py  ecmwf.py  gefs.py  nbm.py  qc.py
kalshi-temp-bot/: alembic.ini
kalshi-temp-bot/alembic/: env.py
kalshi-temp-bot/api/: websocket.py
models/: calibration.py  ngboost_model.py  qrf_model.py  residual_model.py  spread_inflation.py
processing/: bias_correction.py  downscaling.py  features.py
risk/: risk_controls.py
scheduler/: jobs.py
scripts/: bootstrap_history.py  initial_train.py  run_backtest.py
strategies/: ensemble_strategy.py  shared_state.py
tests/: test_features.py  test_kelly.py  test_models.py  test_order_manager.py  test_risk_controls.py
trading/: kalshi_client.py  order_manager.py  position_tracker.py
(+24 files in other folders)
